@@ -8,8 +8,10 @@ anna (1.31) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Remove Martin Sjogren and Matt Kraai as Uploaders with many thanks for
     their past contibutions.
+  * Make sure components queued using anna-install always get installed, even
+    when running in lowmem level 2. Closes: #476614.
 
- -- Frans Pop <fjp@debian.org>  Tue, 08 Apr 2008 13:04:06 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 19 Apr 2008 00:00:12 +0200
 
 anna (1.30) unstable; urgency=low
 
